# leetgo

./: .gitignore  .golangci.yaml  .goreleaser.yaml  LICENSE  Makefile  README.md  README_en.md  README_zh.md  go.mod  go.sum  go.work  main.go  update_readme.go
.github/: dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  release.yaml
cmd/: cache.go  config.go  contest.go  debug.go  edit.go  encrypt.go  fix.go  git.go  info.go  init.go  inspect.go  new.go  open.go  pick.go  root.go  submit.go  test.go  today.go  tui.go  update.go
config/: config.go  consts_unix.go  consts_win.go  encoder.go  encrypt.go  state.go  styles.go
constants/: constants.go  consts_unix.go  consts_win.go
editor/: editor.go  vim.go
lang/: base.go  cpp.go  dep.go  gen.go  go.go  java.go  judge.go  list.go  modifier.go  multi.go  python.go  range_test.go  rust.go  rust_test.go  test.go  testcase.go  tmpl.go  version.go
leetcode/: cache.go  cache_gob.go  cache_json.go  cache_pb.go  cache_sqlite.go  client.go  client_us.go  contest.go  cred.go  credential.go  db.go  decoder.go  metadata_fix.go  models.go  qid.go  question.go  question.pb.go  question.proto
misc/: demo.cast  demo.tape  demo_input.txt  leetcode-cn-Query.json
opener/: vscode.go
scripts/: analyze.go  completions.sh  install.sh  update_readme.go
testutils/python/: README.md  pyproject.toml
testutils/python/src/leetgo_py/: __init__.py  list.py  parse.py  tree.py  utils.py
utils/: file.go  str.go  str_test.go  wait.go
(+34 files in other folders)
